--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,11 @@
-FROM nginx:1.17.1-alpine  
-COPY nginx.conf /etc/nginx/nginx.conf  
-COPY dist/Front-end /usr/share/nginx/html  
-EXPOSE 80  
+FROM node:12.7-alpine AS build
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+RUN npm run build
+
+FROM nginx:1.17.1-alpine
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY --from=build /app/dist/Front-end /usr/share/nginx/html
+EXPOSE 80
