--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ x-common-variables: &common-variables
 
 services:
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0
     environment:
       <<: *common-variables
       MYSQL_HOST: localhost
@@ -21,7 +21,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./db/sample.sql:/docker-entrypoint-initdb.d/sample.sql
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --character-set-client-handshake=FALSE
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --character-set-client-handshake=FALSE --default-authentication-plugin=mysql_native_password
 
 ## Part to remove if you don't want phpMyAdmin
   phpmyadmin:
@@ -62,7 +62,7 @@ services:
   client:
     build: ./client    
     ports:
-      - 4200:80
+      - 4210:80
     volumes:
       - ./client/src:/app/src
     links:
